# rebrgen

./: .clinerules  .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  build.bat  build.sh  build_config.template.json  commands.md  gen_template.bat  gen_template.sh  generate.bat  run.bat  run_generated.bat  run_generated.sh  simple.bm  test_tcp.ebm  unictest_latest.txt
.clinerules/: development_cycle.md  directories.md  hook_syntax.md  important_note.md  overview.md
.github/: dependabot.yml
.github/workflows/: build.yaml  scorecard.yml
ast/: bit.h  op.bgn
binary/: binary_module.bgn  binary_module.hpp  convert.cpp  convert.hpp
docs/: architecture.md  binary_module.md  bm2python_hooks.md  development.md  hook_file_templates.md  refactoring_plan.md  template_parameters.md  words.md
docs/cline/: cpp3_migration_plan.md  development_cycle.md  go_generator_improvement.md
docs/en/: index.md  script_reference.md  testing_verification.md  visitor_hooks_and_dsl.md
docs/gemini/: conversation_summary.md
docs/ja/: script_reference.md  testing_verification.md  visitor_hooks_and_dsl.md
script/: binary_module.bat  binary_module.ps1  build.bat  build.ps1  build.py  build.sh  collect_cmake.py  ebm2jsonschema.py  ebmcodegen.py  ebmdsl.py  ebmop.py  ebmtemplate.py  ebmtest.py  ebmtestgen.py  ebmwebgen.py  gen_template.bat  gen_template.ps1  gen_template.py  gen_template.sh  generate.bat  generate.ps1  generate.py  generate.sh  generate_golden_master.py  generate_test_glue.py  generate_web_glue.py  list_lang.py  run_cmptest.py  run_cycle.py  run_generated.bat  run_generated.ps1  run_generated.py  run_generated.sh  split_dot.py  test_compatibility.py  unictest.py  unictest_setup.py  update_ebm.py
script/bm/: generate_golden_master.py  generate_web_glue.py  test_compatibility.py
src/: CMakeLists.txt  binary_module.bgn  binary_module.hpp  common.hpp  convert.cpp  convert.hpp  encode.cpp  internal.hpp  main.cpp
src/bm/: binary_module.bgn  binary_module.cpp  binary_module.hpp  common.hpp  convert.cpp  convert.hpp  encode.cpp  fallback.hpp  helper.hpp  internal.hpp  load_json.cpp  macro.hpp  main.cpp  optimize.cpp  save_module.cpp  transform.cpp  transform.hpp
src/bm/transform/: bind_coder.cpp  bit_field_size.cpp  control_flow_graph.cpp  flatten.cpp  merge_conditional.cpp  property_accessor.cpp  sort_formats.cpp
src/bm2/: config_template.json  context.hpp  entry.hpp  gen_template.cpp  hook_list.bgn  hook_list.hpp  map_macro.hpp
src/bm2/gen_template/: accessor.cpp  define.hpp  eval.cpp  flags.hpp  generate.hpp  glue_code.cpp  glue_code.hpp  hook_list.bgn  hook_list.hpp  hook_load.cpp  hook_load.hpp  inner_block.cpp  inner_function.cpp  main.cpp  parameter.cpp  type.cpp
src/bm2c/: CMakeLists.txt  bm2c.cpp  bm2c.hpp  config.json  import_base.txt  main.cpp
src/bm2cpp/: CMakeLists.txt  bm2cpp.cpp  bm2cpp.hpp  config.json  main.cpp
src/bm2cpp3/: CMakeLists.txt  bm2cpp3.cpp  config.json
src/bm2go/: CMakeLists.txt  bm2go.cpp  bm2go.hpp  config.json  main.cpp
src/bm2go/hook/: block_define_enum.txt  block_define_enum_member.txt  block_define_format.txt  block_define_union.txt  block_define_union_member.txt  block_end_enum.txt  cmptest_build.txt  escape_ident.txt  field_accessor_define_union_member.txt  file_top.txt  func_define_function.txt  param_state_variable_parameter.txt  sections.txt
src/bm2haskell/: CMakeLists.txt  bm2haskell.cpp  bm2haskell.hpp  config.json  main.cpp
src/bm2haskell/hook/: file_top.txt
src/bm2hexmap/: CMakeLists.txt  bm2hexmap.cpp  bm2hexmap.hpp  main.cpp
src/bm2kaitai/: CMakeLists.txt  bm2kaitai.cpp  config.json
src/bm2py/: CMakeLists.txt  bm2py.cpp  bm2py.hpp  config.json  import_base.txt  main.cpp
src/bm2py/hook/: block_declare_function.txt  block_declare_union.txt  block_define_property_getter.txt  block_define_property_setter.txt  block_define_union_member_after.txt  each_inner_function.txt  file_top.txt  flags.txt  func_call_decode.txt  func_define_function_before.txt  func_define_function_pre_main.txt  func_elif_after.txt  type_accessor_define_union_member.txt
src/bm2python/: CMakeLists.txt  bm2python.cpp  bm2python.hpp  config.json  main.cpp
src/bm2rust/: CMakeLists.txt  bm2rust.cpp  bm2rust.hpp  config.json  main.cpp
src/bm2rust/hook/: cmptest_build.txt  flags.txt
src/bmgen/: convert.cpp  encode.cpp  fallback.hpp  helper.hpp  internal.hpp  load_json.cpp  macro.hpp  main.cpp  transform.cpp  transform.hpp
src/ebm/: ebm.ps1  ebm.py  extended_binary_module.bgn  extended_binary_module.cpp  extended_binary_module.hpp  extended_binary_module.md  extended_binary_module_zc.cpp  extended_binary_module_zc.hpp
src/ebmcg/: CMakeLists.txt
src/ebmcodegen/: access.cpp  body_subset.cpp  class_based.cpp  json_loader.cpp  main.cpp  structs.cpp
src/ebmgen/: GEMINI.md  GEMINI2.md  access.hpp  access_helper.hpp  common.hpp  convert.cpp  convert.hpp  converter.cpp  converter.hpp  debug_printer.cpp  debug_printer.hpp  handler_registry.cpp  handler_registry.hpp  json_conv.cpp  json_conv.hpp  json_printer.cpp  json_printer.hpp  load_json.cpp  load_json.hpp  main.cpp  mapping.cpp  mapping.hpp
src/ebmgen/test/: CMakeLists.txt  expression_test.cpp  if_test.cpp
src/ebmgen/test/bgn/: if_true.bgn
src/ebmip/: CMakeLists.txt
src/test/: available.bgn  full_networks.bgn  http2_frame_test.bgn  native_endian.bgn  nested.bgn  nop.bgn  recursive.bgn  simple_case.bgn  test_capture.bgn  test_cases.bgn
syntax/: package-lock.json  package.json
syntax/sections-txt/: CHANGELOG.md  README.md  package.json  sections-txt-0.0.1.vsix  vsc-extension-quickstart.md
test/: assert_if.json  inputs.json  unictest.json
testkit/: cmptest.json  inputs.json  targets.json  test_info.json
testkit/c/: cmptest.json  setup.py
testkit/cpp/: cmptest.json  setup.py
testkit/cpp3/: cmptest.json  setup.py  test_template.cpp
testkit/go/: cmptest.json  setup.py
testkit/haskell/: cmptest.json  setup.py
testkit/kaitai/: cmptest.json  setup.py
testkit/python/: cmptest.json  setup.py
testkit/rust/: cmptest.json  setup.py  test_template.rs
(+482 files in other folders)
