#license
cmake_minimum_required(VERSION 3.25)
project(bm2go)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tool)
add_executable(bm2go main.cpp bm2go.cpp)
target_link_libraries(bm2go futils bm)
install(TARGETS bm2go DESTINATION tool)
if ("$ENV{BUILD_MODE}" STREQUAL "web")
  install(FILES "${CMAKE_BINARY_DIR}/tool/bm2go.wasm" DESTINATION tool)
endif()
